# toy-mt-framework

./: CMakeLists.txt  Makefile  README.md  prepbuild
BusyWaitCalibration/: CMakeLists.txt  Makefile  busy-wait-calibrate  calibrate.h  main.cpp
DispatchProcessingDemo/: CMakeLists.txt  Makefile  main.cpp
DispatchProcessingDemo/DispatchFrameworkCore/: Path.cpp  Schedule.cpp
OpenMPProcessingDemo/: CMakeLists.txt  Makefile  main.cpp
OpenMPProcessingDemo/OpenMPFrameworkCore/: EventProcessor.cpp  EventProcessor.h  Path.cpp  Schedule.cpp
OpenMPProcessingDemo/OpenMPUnitTests/: Event_test.cpp
SingleThreadedProcessingDemo/: CMakeLists.txt  Makefile  main.cpp
SingleThreadedProcessingDemo/SingleThreadedFrameworkCore/: Schedule.cpp
TBBProcessingDemo/: CMakeLists.txt  Makefile  main.cpp  setenvironment  test_config.json
TBBProcessingDemo/TBBFrameworkCore/: Path.cpp  WaitingTask.h  WaitingTaskList.cpp
cms-data/: changebusywait  changenevts  generateConfig.py  generate_config.sh  generate_config_cori.sh  generate_config_cori_64t.sh  generate_config_cori_single_t.sh  generate_config_tev.sh  generate_config_tev_1t.sh  generate_config_tev_256t.sh  generate_config_tev_mt.sh  generate_config_vesta.sh  module-relations.yaml  module-storage2get.yaml  module-timings.yaml  reco_2018_data_displacedjet_busywait.config  reco_displacedjet_busywait.config  reco_hipileup_5_2_0_busywait_perfectIO.config.tt  reco_hipileup_5_2_0_busywait_perfectIO_single.config  reco_hipileup_5_2_0_sleeping_perfectIO.config.tt  run_job.sh  run_job_single.sh
